Re-written code using VMSupport to detect run-time agents.