@@ -208,6 +208,7 @@ tasks.withType(JavaCompile) {
 test {
     maxHeapSize = "2g"
     maxParallelForks = (System.env.CORDA_NODE_TESTING_FORKS == null) ? 1 : "$System.env.CORDA_NODE_TESTING_FORKS".toInteger()
+    jvmArgs '-Djdk.attach.allowAttachSelf=true'
 }
 
 tasks.withType(Test) {
